[package]
name = "amqp_large_content_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe2o3-amqp = { git = "https://github.com/minghuaw/fe2o3-amqp", branch = "0.9-dev" }
# serde_amqp = { git = "https://github.com/minghuaw/fe2o3-amqp", branch = "96-alternative-map" }
# fe2o3-amqp = "0.8"
anyhow = "1.0.49"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread", "rt"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
